--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -1,2 +1,57 @@
 // Normally mainpage styles
- 
+.out
+	width: 1000px
+	overflow: hidden
+.bottomer
+	overflow: auto
+	width: 1000px
+	border: 1px solid green  
+.topper
+	position: fixed
+	background: #fff 
+	z-index: 10
+	width: 1000px 
+	overflow: hidden
+	td
+		background: #fff 
+.hideme
+	opacity: 0
+	visibility: hidden 
+table 
+	border-spacing: 0
+	border-collapse: collapse   
+	width: 2700px 
+	td
+		border: 1px solid #BCBDC0 
+		height: 20px 
+		text-align: center
+		vertical-align: middle
+	td.Answer-options
+		width: 400px 
+		text-align: left
+	td.Question
+		color: #fff
+		text-align: left
+		color: #fff  
+		text-transform: uppercase
+		background: #44825F 
+	td
+		width: 300px !important
+.bul
+	width: 14px 
+	height: 14px 
+	background: #231F20
+	border-radius: 14px  
+	display: inline-block
+	position: relative
+	top: 2px 
+p.Answer-options
+	padding-left: 5px 
+p.Question
+	padding-left: 5px 
+p.Answerlong
+	text-align: left
+	padding: 4px 
+.k__title
+	font-weight: bold
+	font-size: 110% 
