--- a/css/screen.css
+++ b/css/screen.css
@@ -25,3 +25,28 @@ body { font-size: 12px; font-family: Arial, sans-serif; line-height: 1.4; }
 .l:after { content: " "; display: table; clear: both; }
 .l .l-col1 { float: left; width: 20%; }
 .l .l-col2 { float: right; width: 70%; }
+
+.out { width: 1000px; overflow: hidden; }
+
+.bottomer { overflow: auto; width: 1000px; border: 1px solid green; }
+
+.topper { position: fixed; background: white; z-index: 10; width: 1000px; overflow: hidden; }
+.topper td { background: white; }
+
+.hideme { opacity: 0; visibility: hidden; }
+
+table { border-spacing: 0; border-collapse: collapse; width: 2700px; }
+table td { border: 1px solid #bcbdc0; height: 20px; text-align: center; vertical-align: middle; }
+table td.Answer-options { width: 400px; text-align: left; }
+table td.Question { color: white; text-align: left; color: white; text-transform: uppercase; background: #44825f; }
+table td { width: 300px !important; }
+
+.bul { width: 14px; height: 14px; background: #231f20; border-radius: 14px; display: inline-block; position: relative; top: 2px; }
+
+p.Answer-options { padding-left: 5px; }
+
+p.Question { padding-left: 5px; }
+
+p.Answerlong { text-align: left; padding: 4px; }
+
+.k__title { font-weight: bold; font-size: 110%; }
