--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -6,6 +6,8 @@
 	overflow: auto
 	width: 1000px
 	border: 1px solid green  
+	padding-bottom: 20px 
+	height: 500px 
 .topper
 	position: fixed
 	background: #fff 
