--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -5,7 +5,6 @@
 .bottomer
 	overflow: auto
 	width: 1000px
-	border: 1px solid green  
 	padding-bottom: 20px 
 	height: 500px 
 .topper
@@ -28,6 +27,8 @@ table
 		height: 20px 
 		text-align: center
 		vertical-align: middle
+		border-right-width: 2px
+		border-right-color: #000  
 	td.Answer-options
 		width: 400px 
 		text-align: left
