--- a/css/screen.css
+++ b/css/screen.css
@@ -28,7 +28,7 @@ body { font-size: 12px; font-family: Arial, sans-serif; line-height: 1.4; }
 
 .out { width: 1000px; overflow: hidden; }
 
-.bottomer { overflow: auto; width: 1000px; border: 1px solid green; padding-bottom: 20px; height: 500px; }
+.bottomer { overflow: auto; width: 1000px; padding-bottom: 20px; height: 500px; }
 
 .topper { position: fixed; background: white; z-index: 10; width: 1000px; overflow: hidden; }
 .topper td { background: white; }
@@ -36,7 +36,7 @@ body { font-size: 12px; font-family: Arial, sans-serif; line-height: 1.4; }
 .hideme { opacity: 0; visibility: hidden; }
 
 table { border-spacing: 0; border-collapse: collapse; width: 2700px; }
-table td { border: 1px solid #bcbdc0; height: 20px; text-align: center; vertical-align: middle; }
+table td { border: 1px solid #bcbdc0; height: 20px; text-align: center; vertical-align: middle; border-right-width: 2px; border-right-color: black; }
 table td.Answer-options { width: 400px; text-align: left; }
 table td.Question { color: white; text-align: left; color: white; text-transform: uppercase; background: #44825f; }
 table td { width: 300px !important; }
