--- a/css/screen.css
+++ b/css/screen.css
@@ -26,11 +26,13 @@ body { font-size: 12px; font-family: Arial, sans-serif; line-height: 1.4; }
 .l .l-col1 { float: left; width: 20%; }
 .l .l-col2 { float: right; width: 70%; }
 
-.out { width: 1000px; overflow: hidden; }
+html, body { min-height: 100%; width: 100%; position: relative; }
 
-.bottomer { overflow: auto; width: 1000px; padding-bottom: 20px; height: 500px; }
+.out { width: 1000px; width: 100%; height: 100%; position: absolute; bottom: 0; left: 0; top: 0; right: 0; overflow: hidden; }
 
-.topper { position: fixed; background: white; z-index: 10; width: 1000px; overflow: hidden; }
+.bottomer { overflow: auto; width: 1000px; padding-bottom: 20px; height: 500px; position: absolute; bottom: 0; left: 0; top: 0; right: 0; height: 100%; width: 100%; }
+
+.topper { position: fixed; background: white; z-index: 10; width: 1000px; overflow: hidden; width: 100%; top: 0; left: 0; right: 0; }
 .topper td { background: white; }
 
 .hideme { opacity: 0; visibility: hidden; }
