--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -1,18 +1,40 @@
 // Normally mainpage styles
+html,body
+	min-height: 100%
+	width: 100%
+	position: relative  
 .out
 	width: 1000px
+	width: 100%
+	height: 100%
+	position: absolute
+	bottom: 0
+	left: 0
+	top: 0
+	right: 0     
 	overflow: hidden
 .bottomer
 	overflow: auto
 	width: 1000px
 	padding-bottom: 20px 
 	height: 500px 
+	position: absolute
+	bottom: 0
+	left: 0
+	top: 0
+	right: 0    
+	height: 100%
+	width: 100%  
 .topper
 	position: fixed
 	background: #fff 
 	z-index: 10
 	width: 1000px 
 	overflow: hidden
+	width: 100% 
+	top: 0
+	left: 0
+	right: 0    
 	td
 		background: #fff 
 .hideme
