--- a/css/screen.css
+++ b/css/screen.css
@@ -28,9 +28,9 @@ body { font-size: 12px; font-family: Arial, sans-serif; line-height: 1.4; }
 
 html, body { min-height: 100%; width: 100%; position: relative; }
 
-.out { width: 1000px; width: 100%; height: 100%; position: absolute; bottom: 0; left: 0; top: 0; right: 0; overflow: hidden; }
+.out { width: 1000px; width: 100%; position: absolute; bottom: 10px; left: 0; top: 0; right: 0; overflow: hidden; }
 
-.bottomer { overflow: auto; width: 1000px; padding-bottom: 20px; height: 500px; position: absolute; bottom: 0; left: 0; top: 0; right: 0; height: 100%; width: 100%; }
+.bottomer { overflow: auto; width: 1000px; padding-bottom: 20px; position: absolute; bottom: 10px; left: 0; top: 0; right: 0; width: 100%; }
 
 .topper { position: fixed; background: white; z-index: 10; width: 1000px; overflow: hidden; width: 100%; top: 0; left: 0; right: 0; }
 .topper td { background: white; }
