--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -6,9 +6,9 @@ html,body
 .out
 	width: 1000px
 	width: 100%
-	height: 100%
+	//height: 100%
 	position: absolute
-	bottom: 0
+	bottom: 10px
 	left: 0
 	top: 0
 	right: 0     
@@ -17,13 +17,12 @@ html,body
 	overflow: auto
 	width: 1000px
 	padding-bottom: 20px 
-	height: 500px 
+	//height: 500px 
 	position: absolute
-	bottom: 0
+	bottom: 10px
 	left: 0
 	top: 0
 	right: 0    
-	height: 100%
 	width: 100%  
 .topper
 	position: fixed
