--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -24,6 +24,7 @@ html,body
 	top: 0
 	right: 0    
 	width: 100%  
+	padding-top: 130px 
 .topper
 	position: fixed
 	background: #fff 
@@ -33,9 +34,12 @@ html,body
 	width: 100% 
 	top: 0
 	left: 0
-	right: 0    
+	right: 0   
+	height: 130px  
 	td
 		background: #fff 
+		height: 130px
+	
 .hideme
 	opacity: 0
 	visibility: hidden 
